# gcis-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  clean_input_data.sh  clean_test_data.sh  download_pizzachilli.sh  ejemplo_gcis.txt  ejemplo_gcis_2.txt  gcis_lite  main.cpp  performance  set_project_functions.sh  test.sh  test_decompression.sh
headers/: eliasfano.h  encoders.h  gcis.h  grammar.h  simple8b.h  utils.h
unit_tests/: CMakeLists.txt  test_elias_fano.cpp  test_main.cpp  test_s8b.cpp
